--- a/package.json
+++ b/package.json
@@ -25,14 +25,17 @@
   "license": "MIT",
   "devDependencies": {
     "babel-cli": "^6.3.17",
+    "babel-eslint": "^6.0.3",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-stage-2": "^6.5.0",
     "chai": "^3.4.1",
     "coveralls": "^2.11.9",
     "del": "^2.2.0",
+    "eslint-config-rackt": "^1.1.1",
     "gulp": "^3.9.0",
     "gulp-babel": "^6.1.1",
     "gulp-babel-istanbul": "^0.11.0",
+    "gulp-eslint": "^2.0.0",
     "gulp-inject-modules": "^0.1.1",
     "gulp-istanbul-report": "0.0.1",
     "gulp-mocha": "^2.2.0",
