Package name correction

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Pikola.js",
+  "name": "Pikola",
   "version": "0.1.0",
   "description": "Library for advanced scheduling",
   "main": "index.js",
