--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Pikola",
+  "name": "pikola",
   "version": "0.1.1",
   "description": "Library for advanced scheduling",
   "main": "index.js",
@@ -23,7 +23,7 @@
     "url": "https://github.com/mkmarek/"
   },
   "license": "MIT",
-  "devDependencies": {
+  "dependencies": {
     "babel-cli": "^6.3.17",
     "babel-eslint": "^6.0.3",
     "babel-preset-es2015": "^6.6.0",
@@ -45,6 +45,5 @@
     "merge2": "^0.3.6",
     "mocha": "^2.3.4",
     "remap-istanbul": "^0.6.3"
-  },
-  "dependencies": {}
+  }
 }
