--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "Pikola",
-  "version": "0.1.0",
+  "name": "pikola",
+  "version": "0.1.1",
   "description": "Library for advanced scheduling",
   "main": "index.js",
   "repository": "https://github.com/mkmarek/Pikola.js.git",
@@ -39,7 +39,7 @@
     "gulp-inject-modules": "^0.1.1",
     "gulp-istanbul-report": "0.0.1",
     "gulp-mocha": "^2.2.0",
-    "gulp-sourcemaps": "^2.0.0-alpha",
+    "gulp-sourcemaps": "^2.0.0",
     "isparta": "^4.0.0",
     "istanbul": "^0.4.3",
     "merge2": "^1.0.2",
